correction de fermeture de div et suppression no-wrap nom des fichiers

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -3593,7 +3593,6 @@ ul#attachmentList li.attachmentListItem .lineMain {
     display: block;
     position: relative;
     padding: 1px 24px 2px 24px;
-    white-space:nowrap;
 }
 
 
